@@ -5,6 +5,7 @@ kano-toolset (2.4.0-1) unstable; urgency=low
   * Add decorators:
     * 'retry'
     * 'queue_cb'
+  * Add DBus helper utilities
 
  -- Team Kano <dev@kano.me>  Mon, 15 Feb 2016 17:11:00 +0100
 
